# pm-system

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
.claude/: settings.local.json
.github/workflows/: build-windows.yml  build.yml
docs/: n8n-workflow-email.json
n8n-workflows/: gmail-to-pm-system.json  outlook-to-pm-system.json  task-assigned-email.json
sql/: 001_init.sql  002_email_features.sql  003_task_start_date.sql  004_email_attachments.sql  005_project_goals.sql  006_task_goal_link.sql  007_goal_global.sql  008_gmail_tokens.sql  009_indexes.sql  010_meetings_created_at.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: ai_commands.rs  attachments_commands.rs  clients_commands.rs  contacts_commands.rs  documents_commands.rs  emails_commands.rs  employees_commands.rs  gmail_commands.rs  goals_commands.rs  meetings_commands.rs  mod.rs  notify_commands.rs  outlook_commands.rs  projects_commands.rs  reports_commands.rs  settings_commands.rs  tasks_commands.rs
src-tauri/src/db/: attachments.rs  clients.rs  contacts.rs  documents.rs  emails.rs  employees.rs  gmail_tokens.rs  goals.rs  meetings.rs  migrations.rs  mod.rs  projects.rs  tasks.rs
src-tauri/src/gmail/: api.rs  mod.rs  oauth.rs  sync.rs
src-tauri/src/n8n/: mod.rs  webhook_client.rs  webhook_server.rs
src/hooks/: useAttachments.ts  useChartColors.ts  useClients.ts  useContacts.ts  (+10 more)
(+76 files in other folders)
